test/Fail/Issue6011.err
Issue6011.agda:11.1-26: error: [GenericError]
Invalid rewrite relation
when checking the pragma BUILTIN REWRITE P
